mantle-build/tests/ui/new_bad_ret.stderr
error: Service constructor must return `Self` (aka `Counter`)
 --> $DIR/new_bad_ret.rs:7:52
  |
7 |     pub fn new(ctx: &Context, start_count: u32) -> Self {
  |                                                    ^^^^

error: aborting due to previous error

